# blind-ml

./: .env.example  .gitignore  APPROACH.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  breast_cancer.ipynb  fraud.ipynb  pyproject.toml  requirements.txt
.cursor/rules/: cursor.md
.cursor/skills/blind-ml-demo/: SKILL.md
.cursor/skills/ml-expert/: SKILL.md  debugging-patterns.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
blind_ml/: __init__.py  client.py  demo_helpers.py  healthcare.py  models.py
demo_data/: README.md
schemas/: breast_cancer.json  fraud.json
scripts/: generate_fraud_data.py  generate_healthcare_data.py  patch_fraud_notebook.py  smoke_test.py  upload_bc_batches.py
tests/: test_healthcare_phase1_phase2.py  test_healthcare_phase3_phase4.py  test_healthcare_phase5_phase6.py  test_healthcare_phase7_phase8_phase9.py  test_native_count_models.py
